   
===========
Changes log  
===========

- @version-full@ (@release-date@)
    - Bug fixed
       - On the client-side, a challenge response with a raw value 
         defined wasn't taken into account if a helper was missing.
         Refactored engine's AuthenticatorHelper to move common 
         logic to the AuthenticatorUtils class.
         Reported by Alex Milowski.
    - API changes
       - Added generic value type to NamedValue interface.
       - Added ByteArrayRepresentation to org.restlet.representation
         Suggested by Jerome Idylle.
       - Added constructor from characters arrays in the
         StringRepresentation class.
    - Misc
       - Updated XStream to version 1.4.1
       - Updated Jettison to version 1.3
       
- 2.1 Release Candidate 1 (10/06/2011)
    - Bug fixed
       - Potential NPE in ServerServlet#init(Application).
         Reported by Bryan Hunt.
       - The Application(Context) constructor now behaves like the
         setContext(Context) method. Reported by Bryan Hunt.
       - Fixed internal HTTPS server which wasn't creating an HTTPS
         request with all SSL related properties. 
         Reported by Henry Story.
       - Fixed bug causing premature closing of connections managed
         by the internal NIO/HTTP/SIP connector.
         Reported by Cyril Lakech.
       - The max IO idle time used in code was 60s instead of the
         30s announced in the Javadocs. Now using 30s.
       - Removed extra empty line in XML documents added by the
         XmlWriter class.
       - Fixed potential loops due to BrokenCyclicBarrier in internal
         NIO connector.
       - Fixed issue regarding the posting of Web forms to the GAE 
         platform (release 1.5.0 and higher) due to GAE misbehaviour 
         that consumes streams when receiving Web forms.
         Reported by Bjorn Roche.
    - API changes
       - Added Authenticator#multiAuthenticating to better control